--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EdacyDemo2</title>
+  <title>KenzaScolar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/style.css"/> 
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+ <!-- ##Module à installer
+ npm install bootstrap bootstrap-icons 
+ ##angular json
+ "node_modules/bootstrap/scss/bootstrap.scss",
+  "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+-->
